# rfq-v2-sdk

./: README.md  build.rs
examples/: production_streaming.rs
examples/helpers/: birdeye.rs  mod.rs
fill-decoder/: Cargo.toml  README.md
fill-decoder/idls/: aggregator.json  jupiter.json  rfq_v2.json
fill-decoder/src/: aggregator.rs  analysis.rs  decode.rs  error.rs  jupiter.rs  lib.rs  rfq_v2.rs  scanner.rs  transaction.rs  types.rs  validation.rs
protos/: market_maker.proto
python-sdk/: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
python-sdk/examples/: production_streaming.py
python-sdk/src/protos/: __init__.py  market_maker_pb2.py  market_maker_pb2_grpc.py
python-sdk/src/rfq_sdk/: __init__.py  auth.py  builders.py  client.py  models.py  stream_manager.py  swap_helpers.py  utils.py
rust-sdk/: Cargo.toml  README.md  build.rs
rust-sdk/examples/: deploy_spl_token.rs  production_streaming.rs  reflection_cli.rs
rust-sdk/examples/helpers/: datapi.rs  mod.rs
rust-sdk/src/: builders.rs  client.rs  error.rs  lib.rs  reconnecting.rs  reflection.rs  streaming.rs  types.rs
rust-sdk/tests/: README.md  ultra_api_e2e.rs
rust-sdk/tests/common/: mod.rs
src/: builders.rs  client.rs  error.rs  lib.rs  types.rs
