[package]
name = "fill-decoder"
version = "0.1.0"
edition = "2021"
description = "Decoder and analysis utilities for RFQ v2 fill_exact_in transactions on Solana"
authors = ["ioanSL"]
license = "MIT"
repository = "https://github.com/jup-ag/rfq-v2-sdk"

[workspace]

[dependencies]
solana-sdk = "2.1"
bincode = "1.3"
anchor-lang = "0.32.1"
thiserror = "1.0"
bs58 = "0.5"
base64 = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI-only (optional, pulled in by the binary)
clap = { version = "4", features = ["derive", "env"], optional = true }
reqwest = { version = "0.11", features = ["json"], optional = true }
tokio = { version = "1.0", features = [
    "macros",
    "rt-multi-thread",
], optional = true }

[features]
default = []
cli = ["clap", "reqwest", "tokio"]

[lib]
name = "fill_decoder"
path = "src/lib.rs"

[[bin]]
name = "decode-tx"
path = "src/bin/decode_tx.rs"
required-features = ["cli"]
