[package]
name = "market-maker-client-sdk"
version = "0.1.0"
edition = "2021"
description = "SDK for connecting to the RFQ v2"
authors = ["ioanSL"]
license = "MIT"
repository = "https://github.com/jup-ag/rfq-v2-sdk"

# Explicitly exclude this package from any parent workspace
[workspace]

[dependencies]
# gRPC and Protocol Buffers
tonic = { version = "0.14", features = ["tls-native-roots"] }
tonic-prost = "0.14"
prost = "0.14"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"

# Utilities
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"

# TLS Configuration
rustls = { version = "0.23", features = ["ring"] }
rustls-native-certs = "0.8"
rustls-pemfile = "2.0"
tokio-rustls = "0.26"

# Optional features
futures = { version = "0.3", optional = true }

[dev-dependencies]
# Example-specific dependencies
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
solana-sdk = "2.1"
base64 = "0.21"
bincode = "1.3"
bs58 = "0.5"
reqwest = { version = "0.11", features = ["json"] }
fastrand = "2.0"

[build-dependencies]
tonic-prost-build = "0.14"
protoc-bin-vendored = "3"

[features]
default = []
async-stream = ["futures"]

[lib]
name = "market_maker_client_sdk"
path = "src/lib.rs"

[[example]]
name = "production_streaming"
path = "examples/production_streaming.rs"
